# MethylVis

./: .envrc  .gitignore  Cargo.toml  LICENSE  api_tests.hurl  flake.nix
contam-map-frontend/: package-lock.json  package.json  vite.config.ts
contam-map-frontend/src/bindings/: Assignment.ts  Bin.ts  BinId.ts  BinQuality.ts  ContigAssignment.ts  ContigId.ts  ContigMetadata.ts  ContigSelection.ts  CreateProjectPayload.ts  ErrorResponse.ts  HeatmapData.ts  MetadataUpdate.ts  MethDataFilters.ts  ProjectDetails.ts  ProjectFilter.ts  ProjectQuery.ts
contam-map-frontend/src/components/: Bins.svelte  Contigs.svelte  Dropdown.svelte  Heatmap.svelte  Input.svelte  LoadProject.svelte  LoadedProjects.svelte  Motifs.svelte  ProjectCreation.svelte
contam-map-frontend/src/routes/: +page.svelte
crates/mag_core/: Cargo.toml
crates/mag_core/src/: bin.rs  contig.rs  errors.rs  lib.rs  manager.rs  methylation.rs  parsers.rs  types.rs
crates/mag_core/src/io/reader/: checkm2.rs  contig_bin.rs  methylation.rs  mod.rs
crates/mag_server/: Cargo.toml
crates/mag_server/src/: errors.rs  handlers.rs  main.rs  models.rs  project.rs  routes.rs
